@@ -100,9 +100,9 @@ closeinfo() {
 
 COMMANDLINE=$@
 
-# get the parent directory of the directory containing wrapper.sh, to use
+# get the parent directory of the directory containing _swiftwrap, to use
 # as the run directory
-# this assumes that wrapper.sh is being executed from the top level of
+# this assumes that _swiftwrap is being executed from the top level of
 # the shared directory, and that shared directory is in the top level
 # of the workflow run directory
 WFDIR=$(dirname $(dirname $0))
